-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11, 16, 17
-
Component/s: hotspot
-
b09
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263277 | 16.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
| JDK-8262836 | 16.0.1 | Aleksey Shipilev | P4 | Resolved | Fixed | b08 |
| JDK-8261878 | 11.0.11 | Roman Kennke | P4 | Resolved | Fixed | b04 |
Currently, copying objects in full GC humongous object comaction copies the full region. We can limit that to copying only the object size and save some wasted cycles. Also, this fixes a test failure with loom where object copy checks that the given size matches the object size.
- backported by
-
JDK-8261878 Shenandoah: Use object size for full GC humongous compaction
-
- Resolved
-
-
JDK-8262836 Shenandoah: Use object size for full GC humongous compaction
-
- Resolved
-
-
JDK-8263277 Shenandoah: Use object size for full GC humongous compaction
-
- Resolved
-
- links to
-
Commit
openjdk/jdk16u/101e7429
-
Commit
openjdk/jdk/deb0544f
-
Review
openjdk/jdk16u/55
-
Review
openjdk/jdk/2433
(2 links to)