8261251: Shenandoah: Use object size for full GC humongous compaction Reviewed-by: aph, shade