src/hotspot/share/gc/shenandoah/shenandoahMarkCompact.cpp
@@ -905,7 +905,7 @@ void ShenandoahMarkCompact::compact_humongous_objects() {
 
       Copy::aligned_conjoint_words(heap->get_region(old_start)->bottom(),
                                    heap->get_region(new_start)->bottom(),
-                                   ShenandoahHeapRegion::region_size_words()*num_regions);
+                                   words_size);
 
       oop new_obj = oop(heap->get_region(new_start)->bottom());
       new_obj->init_mark_raw();
